@@ -38,10 +38,11 @@
 		</ul>
 	</li>
 	<li id="menu_execute">
-		<div>Execute Query</div>
+		<div>Run Query</div>
 	</li>
 	<li id="menu_browse">
 		<div>Browse Activities</div>
 	</li>
 </ul>
+<div class="about">d-Portal <b>dquery</b> is a read only SQL interface to the full database</div>
 <div id="top_title"></div>
