@@ -4,6 +4,7 @@ Update glossary for search
 Update placeholder text for activity list query
 Display rows when only result period and no value is found
 Update css for fullwidth search filters
+Update dquery css
 
 
 Development Portal (2020-04-12 shi)
